# ania

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  ania.py  pyproject.toml
ania/: __init__.py  get_servers.py  search_anime.py  select_anime.py  select_episode.py  select_server.py  ui.py  utils.py
ania/web_player/: __init__.py
ania/web_player/templates/: index.html
api/: __init__.py
